index.php front-end core done, added empty sites to-do, stylesheet updated, some other front-end improvements done

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -10,6 +10,11 @@
     color: gold;
 }
 
+.dark-hr {
+    background-color: grey;
+    margin: 10px 0 6px 0;
+}
+
 #login-form {
     width: 30%;
 }
